[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.42.1",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
